--- a/MovieProject/Views/Film/index.cshtml
+++ b/MovieProject/Views/Film/index.cshtml
@@ -33,7 +33,7 @@
                 <h4>
                     <i class="fas fa-user"></i> @film.Oyuncular
                     <i class="fas fa-star" style="color: gold;"></i>
-                    @film.ImdbPuan)
+                    @film.ImdbPuan
                 </h4>
             </div>
         </div>
