--- a/MovieProject/Views/Film/index.cshtml
+++ b/MovieProject/Views/Film/index.cshtml
@@ -21,34 +21,124 @@
             <div class="movie_header">
                 <img class="locandina" src="@film.imgURL" />
                 <h2 class="lbl_font">@film.AdiTurkce (@film.AdiIngilizce)</h2>
-                <h4>@film.CikisTarihi.Year, @film.Yapimci</h4>
-                <span class="minutes">@film.sure</span>
+                <h4>@film.CikisTarihi.Year, <strong> @film.Yapimci</strong></h4>
+                <span class="minutes">@film.sure dk</span>
                 <p class="type">@film.categories</p>
             </div>
             <div class="movie_desc">
-                <p class="text">@film.description</p>
-            </div>
+    <p class="text short-text">@film.description.Substring(0, Math.Min(200, film.description.Length))...</p>
+    <button class="read-more" data-fulltext="@film.description">Devamını Oku</button>
+</div>
+
+
             <div class="movie_social">
                 <h4>
                     <i class="fas fa-user"></i> @film.Oyuncular
-                    <i class="fas fa-star" style="color: gold;"></i>
-                    @film.ImdbPuan
+                    <span class="imdb-box" data-score="@film.ImdbPuan">
+                        <i class="fas fa-star" style="color: gold;"></i> @film.ImdbPuan
+                    </span>
                 </h4>
             </div>
         </div>
         <div class="blur_back bright_back" style="background-image: url('@film.backimgURL');"></div>
     </div>
     <div style="text-align:center;">
-        <button onclick="location.href='@Url.Action("Edit", "Film", new { id = film.Id })'" class="btn-23 btn-edit">
+        <button onclick="location.href='@Url.Action("Edit", "Film", new { id = film.Id })'" class="btn-edit btn-green">
             <span class="text">Düzenle</span>
-            <span class="marquee" aria-hidden>Düzenle</span>
         </button>
-        <button onclick="location.href='@Url.Action("Delete", "Film", new { id = film.Id })'" class="btn-24 btn-edit">
+        <button onclick="location.href='@Url.Action("Delete", "Film", new { id = film.Id })'" class="btn-edit btn-red">
             <span class="text">Kaldır</span>
-            <span class="marquee" aria-hidden>Kaldır</span>
         </button>
     </div>
 }
+
+<style>
+    .btn-edit {
+        padding: 10px 20px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        transition: transform 0.2s;
+    }
+    
+    .btn-green {
+        background-color: rgb(50, 50, 183);
+        color: white;
+    }
+    
+    .btn-red {
+        background-color: red;
+        color: white;
+    }
+    
+    .btn-edit:hover {
+        transform: scale(1.1);
+    }
+    
+    .short-text {
+        max-height: 60px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    .read-more {
+        background: none;
+        border: none;
+        color:  white;
+        cursor: pointer;
+        text-decoration: underline;
+    }
+    
+    .imdb-box {
+        display: inline-block;
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-weight: bold;
+        color: white;
+    }
+    .imdb-box[data-score^="8"],
+    .imdb-box[data-score^="9"],
+    .imdb-box[data-score^="10"] {
+        background-color: green;
+    }
+    .imdb-box[data-score^="6"],
+    .imdb-box[data-score^="7"] {
+        background-color: yellow;
+        color: black;
+    }
+    .imdb-box[data-score^="1"],
+    .imdb-box[data-score^="2"],
+    .imdb-box[data-score^="3"],
+    .imdb-box[data-score^="4"],
+    .imdb-box[data-score^="5"] {
+        background-color: black;
+    }
+    .movie_desc {
+    max-height: 100px; /* Başlangıçta küçük */
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out; /* Animasyon ekliyoruz */
+}
+
+.movie_desc.expanded {
+    max-height: 1000px; /* Açılınca büyümesi için yeterli bir değer */
+}
+
+.short-text {
+    max-height: 60px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.info_section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* İçeriği sola hizala */
+    padding-left: 20px; /* Açıklamayı biraz daha sola çek */
+    width: 90%; /* Kutunun çok geniş olmamasını sağla */
+}
+
+
+</style>
 
 <script>
     function filterFilms() {
@@ -80,4 +170,31 @@
             }
         }
     }
+
+   document.addEventListener("DOMContentLoaded", function () {
+    var buttons = document.querySelectorAll(".read-more");
+
+    buttons.forEach(function (button) {
+        button.addEventListener("click", function () {
+            var textElement = this.previousElementSibling; // Butondan önceki <p> elemanı
+            var fullText = this.getAttribute("data-fulltext"); // Butona eklenen data-fulltext özelliği
+            var descContainer = this.closest(".movie_desc"); // Açıklamanın bulunduğu kutu
+            
+            if (textElement.classList.contains("short-text")) {
+                textElement.innerText = fullText;
+                textElement.classList.remove("short-text");
+                descContainer.classList.add("expanded"); // Kutuyu genişlet
+                this.innerText = "Kapat";
+            } else {
+                textElement.innerText = fullText.substring(0, 200) + "...";
+                textElement.classList.add("short-text");
+                descContainer.classList.remove("expanded"); // Kutuyu eski haline getir
+                this.innerText = "Devamını Oku";
+            }
+        });
+    });
+});
+
+
+
 </script>
