--- a/MovieProject/Views/Film/create.cshtml
+++ b/MovieProject/Views/Film/create.cshtml
@@ -153,6 +153,17 @@
                     <span class="category-item" onclick="toggleCategory('Romantik')">Romantik</span>
                     <span class="category-item" onclick="toggleCategory('Animasyon')">Animasyon</span>
                     <span class="category-item" onclick="toggleCategory('Belgesel')">Belgesel</span>
+                    <span class="category-item" onclick="toggleCategory('Gerilim')">Gerilim</span>
+                    <span class="category-item" onclick="toggleCategory('Suç')">Suç</span>
+                    <span class="category-item" onclick="toggleCategory('Fantastik')">Fantastik</span>
+                    <span class="category-item" onclick="toggleCategory('Savaş')">Savaş</span>
+                    <span class="category-item" onclick="toggleCategory('Tarih')">Tarih</span>
+                    <span class="category-item" onclick="toggleCategory('Western')">Western</span>
+                    <span class="category-item" onclick="toggleCategory('Müzikal')">Müzikal</span>
+                    <span class="category-item" onclick="toggleCategory('Aile')">Aile</span>
+                    <span class="category-item" onclick="toggleCategory('Spor')">Spor</span>
+                    <span class="category-item" onclick="toggleCategory('Biyografi')">Biyografi</span>
+                    <span class="category-item" onclick="toggleCategory('Gizem')">Gizem</span>
                 </div>
                 <div id="selectedCategories" class="selected-categories"></div>
                 <input type="hidden" id="categories" name="categories" required />
